--- a/subprojects/docs/src/docs/userguide/dependencyManagementDeclaringDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/dependencyManagementDeclaringDependencies.adoc
@@ -13,7 +13,7 @@
 // limitations under the License.
 
 [[declaring_dependencies]]
-== Declaring dependencies
+== Declaring Dependencies
 
 Gradle builds can declare dependencies on external binaries, raw files and other Gradle projects. You can find examples for common scenarios in this section. For more information, see the <<dependency_types,full reference on all types of dependencies>>.
 
