--- a/subprojects/docs/src/docs/userguide/dependencyManagementIntroduction.adoc
+++ b/subprojects/docs/src/docs/userguide/dependencyManagementIntroduction.adoc
@@ -13,7 +13,7 @@
 // limitations under the License.
 
 [[dependency_management_introduction]]
-== Introduction
+== Introduction to Dependency Management
 
 Dependency management is a critical feature of every build, and Gradle has placed an emphasis on offering first-class dependency management that is both easy to understand and compatible with a wide variety of approaches. If you are familiar with the approach used by either Maven or Ivy you will be delighted to learn that Gradle is fully compatible with both approaches in addition to being flexible enough to support fully-customized approaches.
 
