Fix typo in doc
Signed-off-by: Jendrik Johannes <jendrik@gradle.com>

--- a/subprojects/dependency-management/preview-features.adoc
+++ b/subprojects/dependency-management/preview-features.adoc
@@ -45,7 +45,7 @@ The new metadata format is still under active development. The latest version of
 - An additional request is required for Maven and Ivy repositories to check for the new metadata file.
 
 [NOTE]
-Activate this feature in Gradle 4.6+ by setting `org.gralde.gradlemetadata=true` in _gradle.properties_.
+Activate this feature in Gradle 4.6+ by setting `org.gradle.gradlemetadata=true` in _gradle.properties_.
 
 ### Publishing `.module` metadata files
 
