--- a/subprojects/docs/src/docs/userguide/customTasks.adoc
+++ b/subprojects/docs/src/docs/userguide/customTasks.adoc
@@ -253,12 +253,19 @@ However, if the state files are non-relocatable, then they can't be shared via t
 [[sec:declaring_and_using_command_line_options]]
 === Declaring and Using Command Line Options
 
-A custom task implementation can expose properties to make the runtime behavior configurable. Sometimes a user wants to declare the value of an exposed task property on the command line instead of the build script. By annotating a setter method of a property with api:org.gradle.api.tasks.options.Option[], Gradle automatically exposes a new command line option with a specific name.
+[NOTE]
+====
+The API for exposing command line options is an <<feature_lifecycle,incubating>> feature.
+====
+
+A custom task implementation exposes properties to make the runtime behavior configurable. Sometimes a user wants to declare the value of an exposed task property on the command line instead of the build script. That's particular helpful if the property value changes more frequently. The task API supports a mechanism for marking a property to automatically generate a corresponding command line parameter with a specific name at runtime.
 
 [[sec:declaring_task_option]]
 ==== Declaring an option
 
-Let's have a look at an example to illustrate the functionality. The custom task `UrlVerify` verifies whether a given URL can be resolved by making a HTTP call and checking the response code. The URL to be verified is configurable through the property `url`. The setter method for the property is annotated with api:org.gradle.api.tasks.options.Option[]. An option requires a mandatory identifier. Additionally, you can provide an optional description.
+Exposing a new command line parameter for a task property is straightforward. You just have to annotate the corresponding setter method of a property with api:org.gradle.api.tasks.options.Option[]. An option requires a mandatory identifier. Additionally, you can provide an optional description. A task can expose as many command line options as properties available in the class.
+
+Let's have a look at an example to illustrate the functionality. The custom task `UrlVerify` verifies whether a given URL can be resolved by making a HTTP call and checking the response code. The URL to be verified is configurable through the property `url`. The setter method for the property is annotated with api:org.gradle.api.tasks.options.Option[].
 
 ++++
 <sample id="stringBasedOption" dir="userguide/tasks/commandLineOption/stringOption/buildSrc/src/main/java" title="Declaring a command line option">
@@ -269,13 +276,13 @@ Let's have a look at an example to illustrate the functionality. The custom task
 All options declared for a task can be <sec:listing_task_options,rendered as console output>> by running the `help` task.
 
 [[sec:using_task_option_command_line]]
-==== Using an option from the command line
+==== Using an option on the command line
 
 Using an option on the command line has to adhere to the following rules:
 
-- The option uses a double-dash as prefix e.g. `--url`. A single dash is not valid notation.
+- The option uses a double-dash as prefix e.g. `--url`. A single dash does not qualify as valid syntax for a task option.
 - The option parameter follows directly after the task declaration e.g. `verifyUrl --url=http://www.google.com/`.
-- Multiple options of a task can be declared in any order on the command line after the task name.
+- Multiple options of a task can be declared in any order on the command line following the task name.
 
 Getting back to the previous example, the build script creates a task instance of type `UrlVerify` and provides a value from the command line through the exposed option.
 
@@ -289,28 +296,28 @@ Getting back to the previous example, the build script creates a task instance o
 [[sec:supported_task_option_data_types]]
 ==== Supported data types for options
 
-Gradle limits the set of data types that can be used for declaring command line options. Be aware that their use on the command line differs.
+Gradle limits the set of data types that can be used for declaring command line options. The use on the command line differ per type.
 
 `boolean`, `Boolean`::
-Describes an option with the value `true` or `false`. Passing the option on the command line does not require assigning a value. For example `--enabled` equates to `true`, not the option evaluates to `false`.
+Describes an option with the value `true` or `false`. Passing the option on the command line does not require assigning a value. For example `--enabled` equates to `true`. The absence of the option uses the default values assign to the property; that is `false` for `boolean` and `null` for the complex data type.
 
 `String`::
 Describes an option with an arbitrary String value. Passing the option on the command line requires a key-value pair of option and value separated by an equals sign e.g. `--containerId=2x94held`.
 
-`Enum`::
+`enum`::
 Describes an option as enum. The enum has to be passed on the command line as key-value pair similar to the String type e.g. `--log-level=DEBUG`.
 
-`List<String>`, `List<Enum>`::
-Describes an option that can takes multiple values of a given type. The values for the option have to be provided as distinct declarations e.g. `--imageId=123 --imageId=456`. Other notations like comma-separated list or multiple values separated by a space character are currently not supported.
+`List<String>`, `List<enum>`::
+Describes an option that can takes multiple values of a given type. The values for the option have to be provided as distinct declarations e.g. `--imageId=123 --imageId=456`. Other notations like comma-separated lists or multiple values separated by a space character are currently not supported.
 
 [[sec:documenting_available_task_option_values]]
 ==== Documenting available values for an option
 
-In theory, an option for a property of type `String` or `List<String>` can accept any arbitrary value. Expected values for such an option can be documented programmatically with the help of the annotation api:org.gradle.api.tasks.options.OptionValues[]. This annotation can be assigned to any method that returns a `List` of one of the supported data types. In addition, you have to provide the option identifier to indicated the relationship between option and available values.
+In theory, an option for a property type `String` or `List<String>` can accept any arbitrary value. Expected values for such an option can be documented programmatically with the help of the annotation api:org.gradle.api.tasks.options.OptionValues[]. This annotation may be assigned to any method that returns a `List` of one of the supported data types. In addition, you have to provide the option identifier to indicate the relationship between option and available values.
 
 [NOTE]
 ====
-Passing in a value on the command line that is not supported by the option does not fail the build or throw an exception. If you'd like to see such runtime behavior then you'll have to implement it in the task action.
+Passing a value on the command line that is not supported by the option does not fail the build or throw an exception. You'll have to implement custom logic for such behavior in the task action.
 ====
 
 This example demonstrates the use of multiple options for a single task. The task implementation provides a list of available values for the option `output-type`.
@@ -341,9 +348,9 @@ You can influence the order of options in the rendered output by assigning a cou
 
 Support for declaring command line options currently comes with a few limitations.
 
-- Command line options can only be declared for custom tasks via annotation. There's no programmatic equivalent to define options.
+- Command line options can only be declared for custom tasks via annotation. There's no programmatic equivalent for defining options.
 - Options cannot be declared globally e.g. on a project-level or as part of a plugin.
-- When assigning an option on the command line then the task exposing the option needs to be spelled out e.g. `gradle check --tests abc` does not work even though the `check` task depends on the `test` task.
+- When assigning an option on the command line then the task exposing the option needs to be spelled out explicitly e.g. `gradle check --tests abc` does not work even though the `check` task depends on the `test` task.
 
 [[worker_api]]
 === The Worker API
