--- a/subprojects/docs/src/docs/userguide/declaringDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/declaringDependencies.adoc
@@ -138,9 +138,11 @@ The following example declares the dependencies on the `utils` and `api` project
 [[sub:scope_of_dependency_configurations]]
 === Defining the scope of a dependency with configurations
 
+==== What is a configuration?
+
 Every dependency declared for a Gradle project applies to a specific scope. For example some dependencies should be used for compiling source code whereas others only need to be available at runtime. Gradle represents the scope of a dependency with the help of a api:org.gradle.api.artifacts.Configuration[].
 
-Many Gradle plugins add pre-defined configurations to your project. The Java plugin, for example, adds configurations to represent the various classpaths it needs for source code compilation, executing tests and the like. See <<sec:java_plugin_and_dependency_management,the Java plugin chapter>> for an example. The sections above demonstrate how to <<sec:declaring_dependencies,declare dependencies>> for different use cases.
+Many Gradle plugins add pre-defined configurations to your project. The Java plugin, for example, adds configurations to represent the various classpaths it needs for source code compilation, executing tests and the like. See <<sec:java_plugin_and_dependency_management,the Java plugin chapter>> for an example. The sections above demonstrate how to <<declaring_dependencies,declare dependencies>> for different use cases.
 
 +++++
 <figure xmlns:xi="http://www.w3.org/2001/XInclude">
@@ -150,6 +152,8 @@ Many Gradle plugins add pre-defined configurations to your project. The Java plu
     </imageobject>
 </figure>
 +++++
+
+==== Defining custom configurations
 
 You can also define configurations yourself, so-called _custom configurations_. A custom configuration is useful for separating the scope of dependencies needed for a dedicated purpose.
 
