--- a/subprojects/docs/src/docs/userguide/buildInitPlugin.adoc
+++ b/subprojects/docs/src/docs/userguide/buildInitPlugin.adoc
@@ -27,7 +27,7 @@ The Gradle Build Init plugin can be used to bootstrap the process of creating a 
 
 Gradle plugins typically need to be _applied_ to a project before they can be used (see <<sec:using_plugins>>). The Build Init plugin is an automatically applied plugin, which means you do not need to apply it explicitly. To use the plugin, simply execute the task named `init` where you would like to create the Gradle build. There is no need to create a “stub” `build.gradle` file in order to apply the plugin.
 
-It also leverages the `wrapper` task from the Wrapper plugin (see <<wrapper_plugin>>), which means that the Gradle Wrapper will also be installed into the project.
+It also leverages the `wrapper` task to <<sec:adding_wrapper,generate the Gradle Wrapper files>> for the project.
 
 
 [[sec:build_init_tasks]]
